css/rs.css
.page-header-text {
    margin-top: 10px;
    margin-bottom: 20px;
}

.footer {
    border-top: 1px solid;
    /* border-top-color is in the color area of this file */
}

.rating-stars,
.rating-stars-noclick {
    unicode-bidi: bidi-override;
    direction: rtl;
    font-size: 150%;
}
.rating-stars > span,
.rating-stars-noclick {
    display: inline-block;
    position: relative;
    /* color is in the colors area of this file */
}
.rating-stars > span:hover:before,
.rating-stars > span:hover ~ span:before {
    content: "\2605";
    position: absolute;
    /* color is in the colors area of this file */
}
.rating-stars > score {
    font-weight: bold;
    /* color is in the colors area of this file */
}
.rating-stars > score > of-possible  {
    font-size: 75%;
    font-weight: lighter;
    /* color is in the colors area of this file */
}
.rating-star {
    font-size: 125%;
}

.rating-date {
    display:inline-block;
    min-height: 17px;
}

.film-line {
    font-size: 125%;
}
.film-line > .film-title {
    font-size: 115%;
    font-weight: bold;
}

.tv-episode-title {
    font-size: 105%;
    font-weight: bold;
}
.tv-season, 
.tv-episodenum {
}

poster {
    margin: 4px;
    border-radius: 3px;
    min-width: 150px;
    display: inline-flex;
}

poster > a {
    margin: auto;
}

poster > img,
poster > a > img {
    width: 150px;
    height: 221px;
    object-fit: cover;
    object-position: center;
    border-radius: .3rem;
}

.img-episode {
    max-height: 221px;
    height: auto;
    border-radius: 25%;
}

episodeListPoster {
    float: left;
    padding: 2px;
}

episodeListPoster > img {
    min-height: 52px;
}

detail-episodeNumber {
    float: left;
    font-size: 2em;
    height: 100%;
    margin-left: 5px;
    margin-right: 5px;
    vertical-align: middle;
}

.thirdparty-bar {
    position: relative;
    text-align: left;
}

.thirdparty-bar > .source-logo-1,
.thirdparty-bar > .source-logo-2 {
    display: inline-block;
}

.thirdparty-bar > .source-logo-1 > a > imdbScore,
.thirdparty-bar > .source-logo-1 > a > tmdbScore {
    position: absolute;
    top: 1px;
    left: 12px;
    /* color is in the colors area of this file */
}

.thirdparty-bar > .source-logo-2 > a > imdbScore,
.thirdparty-bar > .source-logo-2 > a > tmdbScore {
    position: absolute;
    top: 1px;
    left: 85px;
    /* color is in the colors area of this file */
}

.thirdparty-bar > a:link {
    text-decoration: none;
}

.film-filmlists {
    float: left;
    padding-right: 15px;
}

.streams {
    float: left;
    padding-left: 5px;
    padding-right: 10px;
}

.stream {
    float: left;
    padding-right: 10px;
    padding-bottom: 10px;
}

.stream-icon {
    background-image: url("Icons.png");
    /* background-color is in the colors area of this file */
    border-radius: 4px;
    height: 33px;
    width: 35px;
}

.icon-Netflix { background-position: -580px -53px; }
.icon-Amazon { background-position: -445px -10px; }
.icon-xfinity { background-position: -490px -182px; }
.icon-Hulu { background-position: -445px -96px; }
.icon-YouTube { background-position: -625px -10px; }
.icon-HBO { background-position: -625px -96px; }

.userlist-film {
    min-height: 231px;
    width: 160px;
    /* background-color is in the colors area of this file */
    border-style: outset;
    border-width: thin;
    border-radius: 3%;
    /* border-color is in the colors area of this file */
    margin-bottom: 15px;
}

.userlist-film-episode {
    min-height: auto;
    border-radius: 25%;
}

.film-dropdown-content {
    display: none;
    position: absolute;
    top: 0;
    z-index: 1;
    width: 334px;
    min-height: 231px;
    /* background-color is in the colors area of this file */
    border-style: outset;
    border-width: thin;
    /* border-color is in the colors area of this file */
    margin-bottom: 5px;
    padding-bottom: 3px;
    padding-left: 5px;
}

.detail-right {
    left: 170px;
    border-left-style: none;
    border-right-style: outset;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    border-top-right-radius: 3%;
    border-bottom-right-radius: 3%;
}

.detail-left {
    left: -314px;
    border-left-style: outset;
    border-right-style: none;
    border-top-left-radius: 3%;
    border-bottom-left-radius: 3%;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.search-status {
    font-weight: bold;
}

.filmlist-checkbox-inline > label {
    margin-bottom: 0px;
    margin-top: 5px;
}

/* The container <div> - needed to position the dropdown content */
.rs-dropdown-checklist {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.rs-dropdown-checklist-content {
    display: none;
    position: absolute;
    min-width: 160px;
    top: 38px;
    z-index: 1;
    /* background-color is in the color area in this file */
    /* box-shadow is in the color area in this file */
}

/* Links inside the dropdown */
.rs-dropdown-checklist-content a {
    text-decoration: none;
    display: block;
    white-space: nowrap;
    padding: 3px 20px 3px 20px;
    /* color is in the color area in this file */
}

/* Show the dropdown menu on hover */
.rs-dropdown-checklist:hover .rs-dropdown-checklist-content {
    display: block;
}

/* Any line inside the dropdown other than <a> */
.rs-dropdown-checklist-content checklist-line {
    white-space: nowrap;
    padding-left: 20px;
    padding-right: 20px;
}

checklist-line input[type="radio"] {
    margin-right: 3px;
}
#header-search-suggestion {
    position: absolute;
    top: 38px;
    width: 100%;
    padding: 1px 5px 1px 5px;
    border: 1px;
    border-style: solid;
    border-top: none;
    border-radius: 4px 4px 10px 10px;
    /* border-color is in the colors area in this file */
    z-index: 10;
    /* background-color is in the colors area in this file */
}

#header-search-suggestion a {
    text-decoration: none;
    /* color is in the colors area in this file */
}
/* ... */

